<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/workingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingRight="30dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingRight="30dp"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/grey_button"
                android:onClick="clearOnClick"
                android:text="@string/ac"
                android:textColor="@color/black"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/grey_button"
                android:onClick="bracketsOnClick"
                android:text="@string/brackets"
                android:textColor="@color/black"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/grey_button"
                android:onClick="powerOfOnClick"
                android:text="@string/power"
                android:textColor="@color/black"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/orange_button"
                android:onClick="divisionOnClick"
                android:text="@string/division"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/darkgrey_button"
                android:onClick="sevenOnClick"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/darkgrey_button"
                android:onClick="eightOnClick"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/darkgrey_button"
                android:onClick="nineOnClick"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/orange_button"
                android:onClick="timesOnClick"
                android:text="@string/multiplication"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/darkgrey_button"
                android:onClick="fourOnClick"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/darkgrey_button"
                android:onClick="fiveOnClick"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/darkgrey_button"
                android:onClick="sixOnClick"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/orange_button"
                android:onClick="minusOnClick"
                android:text="@string/substract"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/darkgrey_button"
                android:onClick="oneOnClick"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/darkgrey_button"
                android:onClick="twoOnClick"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/darkgrey_button"
                android:onClick="threeOnClick"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/orange_button"
                android:onClick="plusOnClick"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/darkgrey_button"
                android:onClick="decimalOnClick"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/darkgrey_button"
                android:onClick="zeroOnClick"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/darkgrey_button"
                android:onClick="deleteOnClick"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/orange_button"
                android:onClick="equalOnClick"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="@dimen/calcButtonTextSize" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>